estrutura de administrador e cadastro de marcas

--- a/src/app/sign/sign.component.html
+++ b/src/app/sign/sign.component.html
@@ -13,7 +13,7 @@
             <input type="number" id="cpf" class="form-control mb-4" placeholder="CPF" [(ngModel)]="user.cpf">
         
             <!-- Gênero -->
-            <select class="form-control mb-4" id="gender" [(ngModel)]="user.genero">
+            <select class="form-select mb-4" id="gender" [(ngModel)]="user.genero">
                 <option disabled selected value> Gênero </option>
                 <option>Feminino</option>
                 <option>Masculino</option>
